--- a/arch/arm/boot/dts/mys-imx6ull-14x14-evk-gpmi-weim-myb6ulx.dts
+++ b/arch/arm/boot/dts/mys-imx6ull-14x14-evk-gpmi-weim-myb6ulx.dts
@@ -7,7 +7,7 @@
  */
 
 #include "mys-imx6ull-14x14-evk.dts"
-#include "myb-6ulx.dtsi"
+#include "myb-6ull.dtsi"
 
 &gpmi {
 	pinctrl-names = "default";
