add ov5640 camera for MYS-6ULX-IND

--- a/arch/arm/boot/dts/myb-6ul.dtsi
+++ b/arch/arm/boot/dts/myb-6ul.dtsi
@@ -64,6 +64,25 @@
 		clock-names = "mclk";
 	};
 
+	ov5640: ov5640@3c {
+		compatible = "ovti,ov5640";
+		reg = <0x3c>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_csi1>;
+		clocks = <&clks IMX6UL_CLK_CSI>;
+		clock-names = "csi_mclk";
+		pwn-gpios = <&gpio1 5 1>;
+		rst-gpios = <&gpio1 9 0>;
+		csi_id = <0>;
+		mclk = <24000000>;
+		mclk_source = <0>;
+		status = "disabled";
+		port {
+			ov5640_ep: endpoint {
+				remote-endpoint = <&csi1_ep>;
+			};
+		};
+	};
 	ov2659: ov2659@30 {
 		compatible = "ovti,ov2659";
 		reg = <0x30>;
