--- a/arch/arm/configs/myd_y6ulx_defconfig
+++ b/arch/arm/configs/myd_y6ulx_defconfig
@@ -69,19 +69,6 @@ CONFIG_LLC2=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
 CONFIG_CAN_M_CAN=y
-CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
-CONFIG_BT_HCIBTUSB=y
-CONFIG_BT_HCIUART=y
-CONFIG_BT_HCIUART_BCSP=y
-CONFIG_BT_HCIUART_ATH3K=y
-CONFIG_BT_HCIBCM203X=m
-CONFIG_BT_ATH3K=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
@@ -162,10 +149,6 @@ CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
 CONFIG_PCMCIA_RAYCS=y
-CONFIG_BCMDHD=m
-CONFIG_BCMDHD_SDIO=m
-CONFIG_BCMDHD_FW_PATH="/lib/firmware/brcm/brcmfmac43362-sdio.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/brcm/brcmfmac43362-sdio.txt"
 CONFIG_BRCMFMAC=m
 # CONFIG_RTL_CARDS is not set
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
@@ -433,6 +416,7 @@ CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_LRW=y
 CONFIG_CRYPTO_XTS=y
+CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
